--- a/Roy.Core/Roy.Core/Roy.Core.csproj
+++ b/Roy.Core/Roy.Core/Roy.Core.csproj
@@ -9,7 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AuthHelper\OverWrite\" />
+    <Compile Remove="AuthHelper\OverWrite\**" />
+    <Content Remove="AuthHelper\OverWrite\**" />
+    <EmbeddedResource Remove="AuthHelper\OverWrite\**" />
+    <None Remove="AuthHelper\OverWrite\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
