添加获取菜单的api以及IVIEW展示菜单数据

--- a/Roy.Core/Roy.Core.Services/Roy.Core.Services.csproj
+++ b/Roy.Core/Roy.Core.Services/Roy.Core.Services.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Roy.Common\Roy.Common.csproj" />
     <ProjectReference Include="..\Roy.Core.IRepository\Roy.Core.IRepository.csproj" />
     <ProjectReference Include="..\Roy.Core.IServices\Roy.Core.IServices.csproj" />
   </ItemGroup>
