--- a/Roy.Core/Roy.Core/Roy.Core.csproj
+++ b/Roy.Core/Roy.Core/Roy.Core.csproj
@@ -34,6 +34,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Roy.Common\Roy.Common.csproj" />
     <ProjectReference Include="..\Roy.Core.IRepository\Roy.Core.IRepository.csproj" />
     <ProjectReference Include="..\Roy.Core.IServices\Roy.Core.IServices.csproj" />
     <ProjectReference Include="..\Roy.Core.Model\Roy.Core.Model.csproj" />
